--- a/src/server/server/static/app/components/listElement/listElement.html
+++ b/src/server/server/static/app/components/listElement/listElement.html
@@ -27,13 +27,13 @@
       </div>
       <hr>
       <div style="margin:0 5%" class="hint">{{!isOwner() ? 'Only the owner of a list can edit it.' : ''}}</div>
-      <div class="row task-body">
+      <!-- <div class="row task-body">
         <h5 style="margin-bottom: 5px;">Collaborators</h5>
         <div style="margin-bottom: 10px;"class="hint">{{isOwner() ? 'Add registered users as collaborators by entering their email' : 'The owner of the list can add registered users as collaborators.'}}</div>
         <div class="collaborators chips {{isOwner() ? '' : 'no-event'}}"></div>
-        </div>
-        <div style="margin:0 5%; font-size: 10pt;" class="error">{{errorMsg}}</div>
       </div>
+      <div style="margin:0 5%; font-size: 10pt;" class="error">{{errorMsg}}</div>
+      </div> -->
     </div>
   </div>
   <div class="modal-footer">
